cmake_minimum_required(VERSION 3.24)
project(CppCodeSnippets)

set(CMAKE_CXX_STANDARD 23)

set(MY_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${MY_ROOT_DIR}/build/${CMAKE_BUILD_TYPE}_${CMAKE_CXX_COMPILER_ARCHITECTURE_ID})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${MY_ROOT_DIR}/build/${CMAKE_BUILD_TYPE}_${CMAKE_CXX_COMPILER_ARCHITECTURE_ID})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${MY_ROOT_DIR}/build/${CMAKE_BUILD_TYPE}_${CMAKE_CXX_COMPILER_ARCHITECTURE_ID})

message(STATUS "=====")
message(STATUS "===== System Name:     ${CMAKE_SYSTEM_NAME}")
message(STATUS "===== Project Dir:     ${MY_ROOT_DIR}")
message(STATUS "===== Build Type:      ${CMAKE_BUILD_TYPE}")
message(STATUS "===== CMake Version:   ${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}.${CMAKE_PATCH_VERSION}")
message(STATUS "===== Architecture:    ${CMAKE_CXX_COMPILER_ARCHITECTURE_ID} / ${CMAKE_HOST_SYSTEM_PROCESSOR}")
message(STATUS "===== CMake Generator: ${CMAKE_GENERATOR}")
message(STATUS "===== C++ Standard:    ${CMAKE_CXX_STANDARD}")
message(STATUS "===== C++ Compiler:    ${CMAKE_CXX_COMPILER_ID} (${CMAKE_CXX_COMPILER})")

FILE(GLOB CMAKE_FILE_LIST */CMakeLists.txt)
message(STATUS "=====")
message(STATUS "===== Adding the following sub-projects:")

foreach(CMAKE_FILE ${CMAKE_FILE_LIST})
    get_filename_component(SUB_FOLDER ${CMAKE_FILE} PATH)
    get_filename_component(PROJ_NAME  ${SUB_FOLDER} NAME)
    add_subdirectory(${SUB_FOLDER})
    message(STATUS "=====  ${PROJ_NAME}")
endforeach()
