cmake_minimum_required(VERSION 3.24)
project(PyBindSample)

set(CMAKE_CXX_STANDARD 23)

FILE(GLOB_RECURSE SRC_FILES src/*.cpp)

if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    set(PY_VERSIONS "312")
    foreach(PY_VERSION ${PY_VERSIONS})
        set(PY_PROJECT_NAME ${PROJECT_NAME}${PY_VERSION})
        message(STATUS "=====  >> Added Python Bindings (for Python ${PY_VERSION})")
        add_library(${PY_PROJECT_NAME} SHARED ${SRC_FILES})
        target_include_directories(${PY_PROJECT_NAME} SYSTEM PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
        target_include_directories(${PY_PROJECT_NAME} SYSTEM PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/python_${PY_VERSION}_win)
        target_link_libraries     (${PY_PROJECT_NAME}                ${CMAKE_CURRENT_SOURCE_DIR}/lib/python_${PY_VERSION}_win/python${PY_VERSION}.lib)
        set_target_properties(${PY_PROJECT_NAME} PROPERTIES SUFFIX ".pyd")
        set_target_properties(${PY_PROJECT_NAME} PROPERTIES OUTPUT_NAME "/${PY_VERSION}/${PROJECT_NAME}")
    endforeach()
elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    message(STATUS "No Python headers for GNU and Clang; cannot configure Python Bindings")
else()
    message(STATUS "Compiler '${CMAKE_CXX_COMPILER_ID}' is not supported for Python Bindings")
endif()
